syntax = "proto3";

option go_package = ".;pb";

package proto;

service Hello{
  rpc sayHello(HelloRequest) returns(HelloResponse){}
  rpc sayJidan(JidanRequest) returns(JidanResponse){}
}

//请求
message HelloRequest{
  string name = 1;
}

//响应
message HelloResponse{
  string message = 1;
}

//请求
message JidanRequest{
  string name_cn = 1;
  string name_en = 2;
}

//响应
message JidanResponse{
  string message_cn = 1;
  string message_en = 2;
}

